--- a/shared/css/main.css
+++ b/shared/css/main.css
@@ -1,8 +1,23 @@
 main {
+  scroll-behavior: smooth;
+  overflow-y: hidden;
   transition: width 500ms 150ms;
-  margin-left: auto;
-  margin-right: auto;
-  width: 75%;
+  width: 100%;
   height: 100%;
-  background: var(--green);
+}
+
+main .main-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  height: calc(100% - var(--fsize-norm) * 2); /* 100% - padding top & bottom*/
+  padding: var(--fsize-norm) 0px var(--fsize-norm) 0px;
+}
+
+main .main-section p {
+  white-space: normal;
+  margin-bottom: 1em;
+  width: 60vw;
 }
