--- a/shared/css/nav_menu.css
+++ b/shared/css/nav_menu.css
@@ -7,14 +7,14 @@
 }
 
 .nav-menu-title {
-  margin-left: 10%;
-  width: 90%;
-  padding-bottom: 1em;
+  margin-bottom: 1em;
+  margin-left: 20%;
+  width: 80%;
 }
 
 .nav-menu-index {
-  margin-left: 20%;
-  width: 80%;
+  margin-left: 30%;
+  width: 60%;
   padding-bottom: 1em;
 }
 
