--- a/shared/css/img.css
+++ b/shared/css/img.css
@@ -26,7 +26,7 @@ figure figcaption a::before {
   img template
 
   <figure>
-    <img src="" title="">
+    <img src="" alt="" loading="lazy">
     <figcaption>
       <a class="anc-ext" href="" target="_blank"></a>
       <a class="anc-ext" href="" target="_blank"></a>
