--- a/shared/css/main.css
+++ b/shared/css/main.css
@@ -15,6 +15,10 @@ main .main-section {
   height: 100%;
 }
 
+.center {
+  justify-content: space-evenly;
+}
+
 main p {
   white-space: normal;
   width: 60vw;
