--- a/template/index.html
+++ b/template/index.html
@@ -28,6 +28,7 @@
         <a class="nav-menu-index" href="#target-a">target_a</a>
         <a class="nav-menu-index" href="#target-b">target_b</a>
         <a class="nav-menu-index" href="#target-c">target_c</a>
+        <a class="nav-menu-index" href="/">home</a>
       </nav>
     </div>
     <main>
@@ -79,11 +80,11 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suspendisse sed nisi lacus sed viverra tellus in hac. Vulputate sapien nec sagittis aliquam malesuada bibendum arcu. Mattis molestie a iaculis at. Enim nec dui nunc mattis enim ut. Integer quis auctor elit sed vulputate mi sit. Amet consectetur adipiscing elit pellentesque habitant morbi tristique senectus et. Sagittis vitae et leo duis ut diam quam. Molestie a iaculis at erat pellentesque adipiscing. Diam phasellus vestibulum lorem sed. A diam sollicitudin tempor id eu nisl. Egestas congue quisque egestas diam in arcu cursus. Sit amet consectetur adipiscing elit ut aliquam purus.
         </p>
       </div>
-      <div id="target-d" class="main-section">
+      <div id="target-d" class="main-section center">
         <figure class="rand-img">
         </figure>
       </div>
-      <div id="target-e" class="main-section">
+      <div id="target-e" class="main-section center">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suspendisse sed nisi lacus sed viverra tellus in hac. Vulputate sapien nec sagittis aliquam malesuada bibendum arcu. Mattis molestie a iaculis at. Enim nec dui nunc mattis enim ut. Integer quis auctor elit sed vulputate mi sit. Amet consectetur adipiscing elit pellentesque habitant morbi tristique senectus et. Sagittis vitae et leo duis ut diam quam. Molestie a iaculis at erat pellentesque adipiscing. Diam phasellus vestibulum lorem sed. A diam sollicitudin tempor id eu nisl. Egestas congue quisque egestas diam in arcu cursus. Sit amet consectetur adipiscing elit ut aliquam purus.
         </p>
