essay_on_subnautica: complete

--- a/template/index.html
+++ b/template/index.html
@@ -91,7 +91,7 @@
       </div>
     </main>
     <footer>
-      <p title="last updated">17 Dec 2023</p>
+      <p title="date created">17 Dec 2023</p>
     </footer>
   </body>
 </html>
