load root.css in html

--- a/template/index.html
+++ b/template/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="7m45h html template">
     <meta name="keywords" content="7m45h, html, template">
     <link rel="icon" type="image/png" href="/shared/images/favicon.png">
+    <link rel="stylesheet" type="text/css" href="/shared/css/root.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/default.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/footer.css">
     <link rel="stylesheet" type="text/css" href="/shared/css/miscellaneous.css">
