--- a/shared/css/main.css
+++ b/shared/css/main.css
@@ -36,6 +36,12 @@ ul {
   width: 60%;
 }
 
+main iframe {
+  border: none;
+  width: 60vw;
+  height: 100%;
+}
+
 main h1, main h2,
 main h3, main h4,
 main h5, main h6,
@@ -43,7 +49,8 @@ main p,
 main ul,
 main ol,
 main figure,
-main .video {
+main .video, 
+main iframe {
   margin-top: var(--gap-head);
   margin-bottom: var(--gap-head);
 }
