--- a/template/index.html
+++ b/template/index.html
@@ -24,12 +24,12 @@
     <div id="nav-bar">
       <nav class="nav-menu">
         <h2 class="nav-menu-title">
-          <a class="anc-ext" href="/" target="_blank">head</a>
+          <a class="anc-ext" href="" target="_blank">template</a>
         </h2>
         <a class="nav-menu-index" href="#target-a">target_a</a>
         <a class="nav-menu-index" href="#target-b">target_b</a>
         <a class="nav-menu-index" href="#target-c">target_c</a>
-        <a class="nav-menu-index" href="/">home</a>
+        <a class="nav-menu-index" href="/#etc">home</a>
       </nav>
     </div>
     <main>
