--- a/template/index.html
+++ b/template/index.html
@@ -24,7 +24,7 @@
     <div id="nav-bar">
       <nav class="nav-menu">
         <h2 class="nav-menu-title">
-          <a class="anc-ext" href="" target="_blank">template</a>
+          <a class="anc-ext" href="https://github.com/7m45h/7m45h.github.io/tree/master/template" target="_blank">template</a>
         </h2>
         <a class="nav-menu-index" href="#target-a">target_a</a>
         <a class="nav-menu-index" href="#target-b">target_b</a>
@@ -36,7 +36,7 @@
       <div id="target-a" class="main-section">
         <nav class="nav-menu">
           <h2 class="nav-menu-title">
-            <a class="anc-ext" href="/" target="_blank">sub head</a>
+            <a class="anc-ext" target="_blank">sub head</a>
           </h2>
           <a class="nav-menu-index" href="#target-d">target_d</a>
           <a class="nav-menu-index" href="#target-e">target_e</a>
