--- a/template/index.html
+++ b/template/index.html
@@ -33,7 +33,7 @@
       </nav>
     </div>
     <main>
-      <div id="target-a" class="main-section">
+      <div id="target-a" class="main-section center">
         <nav class="nav-menu">
           <h2 class="nav-menu-title">
             <a class="anc-ext" target="_blank">sub head</a>
