--- a/shared/css/nav_menu.css
+++ b/shared/css/nav_menu.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   width: 100%;
-  height: 100%;
+  height: max-content;
 }
 
 .nav-menu-title {
