--- a/shared/css/main.css
+++ b/shared/css/main.css
@@ -4,6 +4,11 @@ main {
 }
 
 .main-section {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  overflow-y: auto;
   width: 100%;
   height: 100%;
 }
