--- a/blog/evil_list/img_grid.css
+++ b/blog/evil_list/img_grid.css
@@ -4,9 +4,20 @@
   height: fit-content;
 
   & > img {
+    transition-property: transform, filter;
+    transition-duration: 500ms;
     border: var(--border);
     object-fit: cover;
     width: 240px;
     height: 360px;
+    transform: scaleX(-1);
+    filter: grayscale(1);
+  }
+
+  &:hover {
+    & img {
+      transform: scaleX(1);
+      filter: grayscale(0);
+    }
   }
 }
