--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  {{ range .Pages }}
-    <a class="border anchor-card" href="{{ .Permalink }}"><span>{{ .LinkTitle }}</span></a>
-  {{ end }}
+  <section>
+    {{ partial "page_lister.html" . }}
+  </section>
 {{ end }}
