--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>{{ site.Title }}: {{ .Title }}</title>
+<title>{{ site.Title }}: {{ if .IsHome }} home {{ else }} {{ .Title }} {{ end }}</title>
 <meta name="author" content="{{ site.Params.author }}">
 <meta name="description" content="{{ .Description }}">
 {{ with .Params.tags }}
