scary library unsorted

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -27,7 +27,7 @@ a {
   color: inherit;
   text-decoration-thickness: 2px;
 
-  &[target="_blank"]:not(:has(img)) {
+  &[target="_blank"]:not(:has(img, span)) {
     text-decoration: none;
     white-space: break-spaces;
 
