--- a/layouts/partials/page_lister.html
+++ b/layouts/partials/page_lister.html
@@ -1,3 +1,3 @@
 {{ range .Pages }}
-  <a class="border anchor-card" href="{{ .Permalink }}"><span>{{ .LinkTitle }}</span></a>
+  {{ partial "anchor_card.html" (dict "url" .Permalink "name" .LinkTitle "ext" false) }}
 {{ end }}
