--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,6 +7,7 @@
   {{ $keywords := collections.Delimit . ", " }}
   <meta name="keywords" content="{{ $keywords }}">
 {{ end }}
+<meta name="color-scheme" content="dark light">
 {{ with resources.Get "images/favicon_dark.png" }}
   <link rel="icon" type="image/png" href="{{ .Permalink }}">
 {{ end}}
