--- a/layouts/partials/nav_lister.html
+++ b/layouts/partials/nav_lister.html
@@ -1,8 +1,8 @@
 {{ range site.Sections }}
-  <a href="{{ .Permalink }}" class="bar-item-item">{{ .LinkTitle }}</a>
+  <a href="{{ .RelPermalink }}" class="bar-item-item">{{ .LinkTitle }}</a>
 {{ end }}
 {{ if .IsHome }}
   {{ range .RegularPages }}
-    <a href="{{ .Permalink }}" class="bar-item-item">{{ .LinkTitle }}</a>
+    <a href="{{ .RelPermalink }}" class="bar-item-item">{{ .LinkTitle }}</a>
   {{ end }}
 {{ end }}
