--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -26,9 +26,10 @@
 {{ with .Site.GetPage "/canv" }}
   {{ if $.InSection . }}
     {{ with $.Resources.Match "scripts/*.js" }}
-      {{ $minjspath := printf "scripts/%s/main.js" page.RelPermalink }}
-      {{ $minjs := resources.Concat $minjspath . | resources.Minify }}
-      <script src="{{ $minjs.RelPermalink }}" defer></script>
+      {{ range . }}
+        {{ $js := resources.Minify . }}
+        <script src="{{ $js.RelPermalink }}" defer></script>
+      {{ end }}
     {{ end }}
   {{ end }}
 {{ end }}
