--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,6 +7,6 @@
   </nav>
   <h1 id="page-title" class="border bar-item spacer">{{ if .IsHome }} home {{ else }} {{ .Title }} {{ end }}</h1>
   <div class="border bar-item square">
-    <input id="theme-switch-btn" class="square" type="checkbox">
+    <div id="theme-switch-btn" class="square"></div>
   </div>
 </header>
