--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   {{ range site.Sections }}
-    <section id="{{ .Title }}">
+    <section id="{{ .LinkTitle }}">
       {{ partial "page_lister.html" . }}
     </section>
   {{ end }}
