--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,7 +5,7 @@
   <nav id="nav-bar" class="border bar-item">
     {{ partial "nav_lister.html" . }}
   </nav>
-  <h1 id="page-title" class="border bar-item spacer">{{ if .IsHome }} home {{ else }} {{ .Title }} {{ end }}</h1>
+  <h1 id="page-title" class="border bar-item spacer">{{ if .IsHome }} home {{ else }} {{ .LinkTitle }} {{ end }}</h1>
   <div class="border bar-item square">
     <div id="theme-switch-btn" class="square"></div>
   </div>
