--- a/layouts/partials/page_lister.html
+++ b/layouts/partials/page_lister.html
@@ -1,3 +1,3 @@
 {{ range .Pages }}
-  {{ partial "anchor_card.html" (dict "url" .RelPermalink "name" .Title "ext" false) }}
+  {{ partial "anchor_card.html" (dict "url" .RelPermalink "name" .LinkTitle "ext" false) }}
 {{ end }}
