--- a/layouts/partials/nav_lister.html
+++ b/layouts/partials/nav_lister.html
@@ -1,12 +1,12 @@
 {{ if .IsHome }}
   {{ range site.Sections }}
-    <a href="#{{ .LinkTitle }}" class="bar-item-item">{{ .LinkTitle }}</a>
+    <a href="#{{ .Title }}" class="bar-item-item">{{ .Title }}</a>
   {{ end }}
   {{ range .RegularPages }}
-    <a href="{{ .RelPermalink }}" class="bar-item-item">{{ .LinkTitle }}</a>
+    <a href="{{ .RelPermalink }}" class="bar-item-item">{{ .Title }}</a>
   {{ end }}
 {{ else }}
   {{ range site.Sections }}
-    <a href="{{ .RelPermalink }}" class="bar-item-item">{{ .LinkTitle }}</a>
+    <a href="{{ .RelPermalink }}" class="bar-item-item">{{ .Title }}</a>
   {{ end }}
 {{ end }}
