--- a/layouts/partials/nav_lister.html
+++ b/layouts/partials/nav_lister.html
@@ -1,9 +1,7 @@
 {{ if .IsHome }}
+  <a href="#{{ .Title }}" class="bar-item-item">{{ .Title }}</a>
   {{ range site.Sections }}
     <a href="#{{ .Title }}" class="bar-item-item">{{ .Title }}</a>
-  {{ end }}
-  {{ range .RegularPages }}
-    <a href="{{ .RelPermalink }}" class="bar-item-item">{{ .Title }}</a>
   {{ end }}
 {{ else }}
   {{ range site.Sections }}
