--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,7 +4,7 @@
       <section id="canvas">
         <canvas></canvas>
       </section>
-      <section id="info">
+      <section id="info" class="text">
         {{ $.Content }}
       </section>
     {{ else }}
