--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <section id="{{ .Title }}">
+  <section id="{{ .Title }}" class="text">
     {{ .Content }}
   </section>
   {{ range site.Sections }}
