--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,5 +10,17 @@ main {
     overflow-y: auto;
     width: 100%;
     height: 100%;
+
+    &.text {
+      flex-wrap: unset;
+      flex-direction: column;
+
+      > * {
+        box-sizing: border-box;
+        margin: var(--fsize-norm) 30%;
+        width: 40%;
+        height: fit-content;
+      }
+    }
   }
 }
