quick font fix + update evil manager

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -8,7 +8,7 @@ body {
   width: 100dvw;
   height: 100dvh;
   background: var(--color-bg);
-  font-family: monospace;
+  font-family: "Fira Mono", monospace;
   font-size: var(--fsize-norm);
   font-weight: bold;
   color: var(--color-fg);
