--- a/content/blog/evil_list/css/img_grid.css
+++ b/content/blog/evil_list/css/img_grid.css
@@ -2,18 +2,20 @@
   margin: var(--fsize-head-a);
 
   & > img {
-    transition-property: transform;
+    transition-property: transform filter;
     transition-duration: 500ms;
     border: var(--border);
     object-fit: cover;
     width: 240px;
     height: 360px;
     transform: scaleX(-1);
+    filter: grayscale(1);
   }
 
   &:hover {
     & img {
       transform: scaleX(1);
+      filter: grayscale(0);
     }
   }
 }
