--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -23,15 +23,27 @@
   {{ $mincss := resources.Concat $mincsspath . | resources.Minify }}
   <link rel="stylesheet" type="text/css" href="{{ $mincss.RelPermalink }}">
 {{ end }}
-{{ with resources.Get "scripts/theme_manager.js" | resources.Minify }}
-  <script src="{{ .RelPermalink }}" defer></script>
-{{ end }}
-{{ with .Site.GetPage "/canv" }}
-  {{ if $.InSection . }}
-    {{ with $.Resources.Match "scripts/*.js" }}
-      {{ range . }}
-        {{ $js := resources.Minify . }}
-        <script src="{{ $js.RelPermalink }}" defer></script>
+{{ with .Resources.Get "scripts/main.js" }}
+  {{ if hugo.IsDevelopment }}
+    {{ with . | js.Build }}
+      <script src="{{ .RelPermalink }}" defer></script>
+    {{ end }}
+  {{ else }}
+    {{ $opts := dict "minify" true }}
+    {{ with . | js.Build $opts | fingerprint }}
+      <script src="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous" defer></script>
+    {{ end }}
+  {{ end }}
+{{ else }}
+  {{ with resources.Get "scripts/main.js" }}
+    {{ if hugo.IsDevelopment }}
+      {{ with . | js.Build }}
+        <script src="{{ .RelPermalink }}" defer></script>
+      {{ end }}
+    {{ else }}
+      {{ $opts := dict "minify" true }}
+      {{ with . | js.Build $opts | fingerprint }}
+        <script src="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous" defer></script>
       {{ end }}
     {{ end }}
   {{ end }}
